hphp/hack/test/typecheck/references/refs_in_array/element_assign1b.php.exp
File "element_assign1b.php", line 5, characters 8-10:
References are only permitted in function calls. (Typing[4299])
