hphp/hack/test/typecheck/references/refs_in_array/element_assign1b.php
<?hh

function test(): void {
  $y = 42;
  $z = &$y; // no error yet in partial mode
}
